# secretagent

./: .gitignore  CHANGES.md  CLAUDE.md  CLI.md  LEARNING_STATUS.md  Makefile  README.md  TODO.md  findings_prompt_scaffolding.md  pyproject.toml
.github/workflows/: ci.yml
benchmarks/: HOWTO.md  Makefile
benchmarks/medagentbench/: Makefile  expt.py  fhir_tools.py  medagent_loop.py  ptools.py
benchmarks/medcalc/: accuracy.py  calculator_simple.py  calculators.py  expt.py  official_calculators.py  ptools.py
benchmarks/musr/: Makefile  examples.json  examples_short.json  expt.py  ptools_common.py  ptools_object.py  ptools_team.py  sweep_murder.yaml  sweep_murder_75.csv  sweep_summary.csv  traces_murder.txt
docs/: BACKSTORY_TEMPLATE.md  CHANGES.md  CLI.md  CODING-GUIDELINES.md  TODO.md  codebase-for-dummies.md  modo_knowledge_reference.md  optimizer.md  orchestrator.md  orchestrator_vision.md  presentation.md
examples/: orchestrate_comparison.py  orchestrate_demo.py  quick_test.py  quickstart.py  sports_understanding.py  sports_understanding_pot.py  sports_understanding_pydantic.py  test_397b.py
experiments/: experiment_log.md
tests/: test_config_extras.py  test_config_space.py  test_encoder.py  test_evaluate.py  test_implement_learn.py  test_learn_baselines.py  test_oolong_parallel_smoke.py  test_oolong_pipeline_helpers.py  test_orchestrate.py  test_orchestrate_integration.py  test_pot.py  test_pydantic_impl.py  test_quickstart.py  test_record.py  test_resolve_tools.py  test_results_cli.py  test_savefile.py  test_sports_understanding.py
(+706 files in other folders)
