[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "secretagent"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "cachier>=4.1.0",
    "litellm>=1.81.15",
    "omegaconf>=2.3.0",
    "pandas>=3.0.1",
    "pydantic-ai>=1.63.0",
    "pydantic-ai-litellm>=0.2.3",
    "pydantic-evals>=1.63.0",
    "pytest>=9.0.2",
    "scipy>=1.17.1",
    "smolagents>=1.22.0",
    "typer>=0.24.1",
]

[tool.setuptools.packages.find]
where = ["src"]

[tool.setuptools.package-data]
secretagent = ["prompt_templates/*.txt", "orchestrate/prompt_templates/*.txt"]

[tool.pytest.ini_options]
pythonpath = ["."]

[dependency-groups]
dev = [
    "mypy>=1.19.1",
    "ruff>=0.15.6",
]
